<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/MainHomeTitle"
        android:layout_width="206dp"
        android:layout_height="101dp"
        android:fontFamily="@font/bangers"
        android:text="@string/bienvenue"
        android:textColor="#100F0F"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.188" />

    <TextView
        android:id="@+id/DishName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alex_brush"
        android:text="@string/bon_app_tit"
        android:textColor="#050505"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainHomeTitle"
        app:layout_constraintVertical_bias="0.466" />

    <Button
        android:id="@+id/HomeBouton"
        android:layout_width="264dp"
        android:layout_height="46dp"
        android:backgroundTint="#FF9800"
        android:text="@string/commencer"
        android:textColor="#424242"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DishName"
        app:layout_constraintVertical_bias="0.277"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/TexteBas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/tous_les_plats_d_licieux_sur_notre_application"
        android:textColor="#121111"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/HomeBouton"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/DishName" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="410dp"
        android:layout_height="498dp"
        android:layout_marginBottom="170dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainHomeTitle"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>